k8s/hello-python-deployment.yaml
apiVersion: apps/v1  
kind: Deployment
metadata:
  name: frontend
  labels:
    app: hello-python
spec:
  replicas: 4
  selector:
    matchLabels:
      app: hello-python
  template:
    metadata:
      labels:
        app: hello-python
        version: "1.0"
    spec:
      # affinity:
      #   podAntiAffinity:
      #     preferredDuringSchedulingIgnoredDuringExecution:
      #       - labelSelector:
      #           matchExpressions:
      #           - key: app
      #             operator: In
      #             values:
      #             - hello-python
      #         topologyKey: "kubernetes.io/hostname"
      # topologySpreadConstraints:
      #   - maxSkew: 1
      #     topologyKey: topology.kubernetes.io/zone
      #     whenUnsatisfiable: DoNotSchedule
      #     labelSelector:
      #       matchExpressions:
      #         - key: app
      #           operator: In
      #           values:
      #             - hello-python
      containers:
      - name: frontend
        image: 'dockervedw/hello-nkp:latest'
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: hello-python
