k8s/hello-python-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: hello-python
spec:
  ports:
    - port: 80
      targetPort: 5000
      name: frontend
  selector:
    app: hello-python
#  externalTrafficPolicy: Local
  type: LoadBalancer
