k8s/hello-python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: hello-python
spec:
  ports:
    - port: 5000
      targetPort: 5000
      name: frontend
  selector:
    app: hello-python
  type: NodePortLocal
